Work on parts of header

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
     </div>
 
     <div class="header">
-        <div class="searchbar"></div>
-        <div class="bell-icon"></div>
-        <div class="profile-pic"></div>
-        <div class="name">Jake Morgan</div>
-        <div class="profile-pic-big"></div>
-        <div class="name-big">Jake Morgan</div>
-        <button class="new"></button>
-        <button class="upload"></button>
-        <button class="share"></button>
+        <div class="header-1">            
+            <label for="search"><i class="fa fa-cloud"></i></label>
+            <input type="text" class="search" id="search">        
+            <div class="bell-icon"><i class="fa fa-cloud"></i></div>
+            <div class="profile-pic"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+            <div class="name">Jake Morgan</div>
+        </div>
+        <div class="header-2">
+            <div class="profile-pic-big"></div>
+            <div class="name-big">Jake Morgan</div>
+            <button class="new"></button>
+            <button class="upload"></button>
+            <button class="share"></button>
+        </div>
     </div>
 
     <div class="main-body">
