Redo and finish top half of header

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 
     <div class="header">
         <div class="header-1">            
-            <label for="search"><i class="fa fa-cloud"></i></label>
-            <input type="text" class="search" id="search">        
-            <div class="bell-icon"><i class="fa fa-cloud"></i></div>
-            <div class="profile-pic"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
-            <div class="name">Jake Morgan</div>
+            <div class="left">
+                <label for="search"><i class="fa fa-cloud"></i></label>
+                <input type="text" class="search" id="search">                
+            </div>
+            <div class="right">
+                <div class="bell-icon"><i class="fa fa-cloud"></i></div>
+                <div class="profile-pic"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+                <div class="name">Jake Morgan</div>
+            </div>
         </div>
         <div class="header-2">
             <div class="profile-pic-big"></div>
