--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
             </div>
         </div>
         <div class="header-2">
-            <div class="profile-pic-big"></div>
-            <div class="name-big">Jake Morgan</div>
-            <button class="new"></button>
-            <button class="upload"></button>
-            <button class="share"></button>
+            <div class="left">
+                <div class="profile-pic-big"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+                <div class="name-big">Hi there, <div>Jake Morgan</div></div>
+            </div>
+            <div class="right">
+                <button class="new">New</button>
+                <button class="upload">Upload</button>
+                <button class="share">Share</button>
+            </div>
         </div>
     </div>
 
