--- a/index.html
+++ b/index.html
@@ -58,14 +58,78 @@
         <div class="projects">
             <div class="card">
                 <div class="project-name">Super project</div>
-                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
-                <button class="favorite"></button>
-                <button class="follow"></button>
-                <button class="share"></button>
+                <div class="description">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-name">Something something awesome</div>
+                <div class="description">Lorem ipsum  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-name">Ai made this, 100% LEGIT NO CLICKBAIT!</div>
+                <div class="description">Lod exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-name">Super project ver2</div>
+                <div class="description">Lorem r. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-name">Super project ver2</div>
+                <div class="description">Lorem r. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-name">Super project ver2</div>
+                <div class="description">Lorem r. </div>
+                <div class="buttons">
+                    <button class="favorite"><i class="fa fa-cloud"></i></button>
+                    <button class="follow"><i class="fa fa-cloud"></i></button>
+                    <button class="share"><i class="fa fa-cloud"></i></button>
+                </div>
             </div>
         </div>
-        <div class="anouncements"></div>
-        <div class="trending"></div>
+        <div class="anouncements">
+            <div class="news">
+                <div class="title">Aliens have touched down on Earth</div>
+                <div class="content">5ft tall, 20 sentient beings from beyond your realm have arrived!</div>
+                <div class="border"> </div>
+            </div>
+            <div class="news">
+                <div class="title">Aliens have touched down on Earth</div>
+                <div class="content">5ft tall, 20 sentient beings from beyond your realm have arrived!</div>
+                <div class="border"> </div>
+            </div>
+            <div class="news">
+                <div class="title">Aliens have touched down on Earth</div>
+                <div class="content">5ft tall, 20 sentient beings from beyond your realm have arrived!</div>
+            </div>
+        </div>
+        <div class="trending">
+            
+        </div>
     </div>
 </body>
 </html>
