Add section titles to main content

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
 
     <div class="main-body">
+        <div class="section-title">Your Projects</div>
         <div class="projects">
             <div class="card">
                 <div class="project-name">Super project</div>
@@ -111,6 +112,7 @@
                 </div>
             </div>
         </div>
+        <div class="section-title">Announcements</div>
         <div class="anouncements">
             <div class="news">
                 <div class="title">Aliens have touched down on Earth</div>
@@ -127,8 +129,28 @@
                 <div class="content">5ft tall, 20 sentient beings from beyond your realm have arrived!</div>
             </div>
         </div>
+        <div class="section-title">Trending</div>
         <div class="trending">
-            
+            <div class="trend-icon"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+            <div class="trend content">
+                <div class="hashtag">@Something</div>
+                <div class="name">Name1</div>
+            </div>
+            <div class="trend-icon"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+            <div class="trend content">
+                <div class="hashtag">@Something</div>
+                <div class="name">Name2</div>
+            </div>
+            <div class="trend-icon"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+            <div class="trend content">
+                <div class="hashtag">@Something</div>
+                <div class="name">Name3</div>
+            </div>
+            <div class="trend-icon"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
+            <div class="trend content">
+                <div class="hashtag">@Something</div>
+                <div class="name">Name4</div>
+            </div>
         </div>
     </div>
 </body>
