Finish up webpage

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-logo">
-            <div><i class="fa fa-cloud"></i>Dashboard</div>
+            <div><img src="/icons/view-dashboard.svg" alt="view-dashboard">Dashboard</div>
         </div>
 
         <div class="sidebar-section1">
-            <div class="home"><i class="fa fa-cloud"></i>Home</div>
-            <div class="profile"><i class="fa fa-cloud"></i>Profile</div>
-            <div class="messages"><i class="fa fa-cloud"></i>Messages</div>
-            <div class="history"><i class="fa fa-cloud"></i>History</div>
-            <div class="tasks"><i class="fa fa-cloud"></i>Tasks</div>
-            <div class="communities"><i class="fa fa-cloud"></i>Communities</div>
+            <div class="home"><img src="/icons/home.svg" alt="home">Home</div>
+            <div class="profile"><img src="/icons/card-account-details-outline.svg" alt="profile">Profile</div>
+            <div class="messages"><img src="/icons/message-processing-outline.svg" alt="messages">Messages</div>
+            <div class="history"><img src="/icons/history.svg" alt="history">History</div>
+            <div class="tasks"><img src="/icons/file-multiple.svg" alt="tasks">Tasks</div>
+            <div class="communities"><img src="/icons/account-group.svg" alt="communities">Communities</div>
         </div>
 
         <div class="sidebar-section2">
-            <div class="settings"><i class="fa fa-cloud"></i>Settings</div>
-            <div class="support"><i class="fa fa-cloud"></i>Support</div>
-            <div class="privacy"><i class="fa fa-cloud"></i>Privacy</div>
+            <div class="settings"><img src="/icons/cog.svg" alt="settings">Settings</div>
+            <div class="support"><img src="/icons/help-box.svg" alt="support">Support</div>
+            <div class="privacy"><img src="/icons/shield-check.svg" alt="privacy">Privacy</div>
         </div>
     </div>
 
     <div class="header">
         <div class="header-1">            
             <div class="left">
-                <label for="search"><i class="fa fa-cloud"></i></label>
+                <label for="search"><img src="/icons/magnify.svg" alt="search icon"></label>
                 <input type="text" class="search" id="search">                
             </div>
             <div class="right">
-                <div class="bell-icon"><i class="fa fa-cloud"></i></div>
+                <div class="bell-icon"><img src="/icons/bell-ring-outline.svg" alt="notifications-icon"></div>
                 <div class="profile-pic"><img src="./images/img_avatar2.png" alt="profile image" class="profile-img"></div>
                 <div class="name">Jake Morgan</div>
             </div>
